--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
-    "modern-normalize": "^1.1.0"
+    "flatpickr": "^4.6.13",
+    "lodash": "^4.17.21",
+    "modern-normalize": "^1.1.0",
+    "parcel": "^2.8.0",
+    "toastr": "^2.1.4"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
-    "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
   },
